--- a/templates/vncserver.service1.j2
+++ b/templates/vncserver.service1.j2
@@ -7,7 +7,7 @@ Type=forking
 PAMName=login
 User=%u
 
-PIDFile=/home/%u/.vnc/%H:1.pid
+PIDFile=/%u/.vnc/%H:1.pid
 ExecStartPre=-/usr/bin/vncserver -kill :1 > /dev/null 2>&1
 ExecStart=/usr/bin/vncserver -depth 24 :1
 ExecStop=/usr/bin/vncserver -kill :1
